<resources>
    <string name="app_name">LifePuzzle</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="login_select_your_profile">SELECT YOUR PROFILE</string>
    <string name="edit_member_select_your_member">SELECT A MEMBER TO EDIT</string>
    <string name="member_name">Name</string>
    <string name="member_relation">Relationship</string>
    <string name="member_audio">Add Audio Message</string>
    <string name="member_video">Add Video Message</string>
    <string name="member_save">SAVE MEMBER</string>
    <string name="member_delete">DELETE MEMBER</string>
    <string name="member_edit_name">Member\'s Name</string>
    <string name="member_edit_relation">Relationship to User</string>

    <string name="LifePuzzle">new_App</string>
    <string name="edit_name">Name</string>
    <string name="edit_email">Email</string>
    <string name="edit_phone_number">Phone Number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="edit_dementia_stage">Stage Of Dementia</string>
    <string name="button_signUp">Create Account</string>
    <string name="gender">Gender</string>
    <string name="name_hint">John Smith</string>
    <string name="email_hint">johnsmith78@email.com</string>
    <string name="phone_number_hint">###-###-####</string>
    <string name="stage_hint">2</string>
    <string name="page_title">SIGN UP</string>
    <string name="chosen_button">Selected</string>
    <string name="age">Age</string>
    <string name="your_age">Your Age</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="change">Change</string>

    <!-- Spinner Entries -->
    <string-array name="stages">
        <item>Stage 1</item>
        <item>Stage 2</item>
        <item>Stage 3</item>
        <item>Stage 4</item>
        <item>Stage 5</item>
        <item>Stage 6</item>
        <item>Stage 7</item>
    </string-array>
</resources>